<resources>
    <string name="app_name">Dots and Boxes</string>
    <string name="title">DOTS AND BOXES</string>
    <string name="enter_names">Enter names:</string>
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="Go">Go</string>
    <string name="grid_size_number">grid size(number>2)</string>
    <string name="turns">TURN:</string>
    <string name="player">Player</string>
    <string name="start">Start!!</string>
    <string name="win">Winner:</string>
    <string name="tie">Tie match</string>
    <string name="undo">Undo</string>
    <string name="no_of_players">No of players</string>
    <string name="update">update</string>
    <string name="restart">Restart</string>
    <string-array name="spin1">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>
